--- a/md_dox__intro_type_examples.html
+++ b/md_dox__intro_type_examples.html
@@ -103,7 +103,7 @@ $(document).ready(function(){initNavTree('md_dox__intro_type_examples.html','');
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><h3>Example 2: Basic types and functions</h3>
-<p>LabVIEW's VIs are written using a language called G; a language that is primarily strictly typed. As a result, the VI assembly can be strictly typed as well. The following VIA file has two VIs; one does a 32 bit integer multiplication, and the other uses IEEE754 double precision.</p>
+<p>LabVIEW's VIs are written using a language called G; a language that is primarily strictly typed. As a result, the VI assembly can be strictly typed, as well. The following VIA file has two VIs; one does 32 bit integer multiplication, and the other uses IEEE754 double precision.</p>
 <div class="fragment"><div class="line"><span class="comment">// Calculate.via</span></div>
 <div class="line">define (CalcUsingIntegers  dv(.VirtualInstrument  (</div>
 <div class="line">    c(</div>
@@ -136,7 +136,7 @@ $(document).ready(function(){initNavTree('md_dox__intro_type_examples.html','');
 <div class="line">42</div>
 <div class="line">42.000000</div>
 </div><!-- fragment --><h3>Example 3: Generic functions</h3>
-<p>The type specific functions in the previous example allow vireo to execute programs efficiently with out runtime type checking. The TADM system also supports generic function definitions that can evaluate to a type specific function at code load time. In simple cases, like the one below, the generic function evaluates to a type specific (non generic) function ( Mull(x y z) =&gt; MulDouble(x y z)). However, the system is more general than C++ style function over loading. For example a generic function can evaluate to more complex patterns such as a vector operation that applies the primitive to every element in an array.</p>
+<p>The type specific functions in the previous example allow vireo to execute programs efficiently without runtime type checking. The TADM system also supports generic function definitions that can evaluate to a type specific function at code load time. In simple cases, like the one below, the generic function evaluates to a type specific (non generic) function ( Mull(x y z) =&gt; MulDouble(x y z)). However, the system is more general than C++ style function overloading. For example, a generic function can evaluate to more complex patterns such as a vector operation that applies the primitive to every element in an array.</p>
 <div class="fragment"><div class="line"><span class="comment">// CalculateGeneric.via</span></div>
 <div class="line">define (Calc  dv(.VirtualInstrument  (</div>
 <div class="line">    c(</div>
