--- a/md_dox__intro_array_examples.html
+++ b/md_dox__intro_array_examples.html
@@ -103,14 +103,14 @@ $(document).ready(function(){initNavTree('md_dox__intro_array_examples.html','')
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><h3>Example 5: Arrays</h3>
-<p>Arrays come in three forms Fixed size, Variable and Bounded. When a variable is defined any of the forms can be used. Input to functions are generally always typed as variable.</p>
+<p>Arrays come in three forms Fixed size, Variable and Bounded. When a variable is defined, any of the forms can be used. Input to functions are generally always typed as variable.</p>
 <div class="fragment"><div class="line">define (ArrayDemo, dv(.VirtualInstrument, (</div>
 <div class="line">    c(</div>
 <div class="line">        e(a(.Int32 *)     variableArray1d)</div>
 <div class="line">        e(a(.Int32 5)     fixedArray1d)</div>
 <div class="line">        e(a(.Int32 -5)    boundedArray1d)</div>
 <div class="line"></div>
-<div class="line">        <span class="comment">// Variable size arrays size to fit initializier list</span></div>
+<div class="line">        <span class="comment">// Variable size arrays size to fit initializer list</span></div>
 <div class="line">        e(dv(a(.Int32 *) (1 2 3 4))  variableArray1dwithDefaults)</div>
 <div class="line"></div>
 <div class="line">        <span class="comment">// Extra initializers added as needed</span></div>
@@ -130,15 +130,15 @@ $(document).ready(function(){initNavTree('md_dox__intro_array_examples.html','')
 <div class="line">) ) )</div>
 <div class="line">enqueue (ArrayDemo)</div>
 </div><!-- fragment --><h3>The IntIndex type</h3>
-<p>Internally Vireo defines a C++ typedef <em>IntIndex</em> for use in array indexing calculations. This is not directly tied to size_t defined by the C++ compiler. Currently it is set to Int32, so the number of elements in any one array are limited to 2^31 though the total size of the elements may require more the 2^31 bytes. When Vireo is compiled in 64 bit mode, programs can work with sets of data so long as no one contigious array exceeds the element count limit. While the IntIndex type is used in the core routines, many of the VIA exposed APIs are still defined directly as Int32 (In order to match LaBVIEW) so there is still work to be done before Int64 indexes can be used.</p>
-<h3>Variable sizd arrays</h3>
-<p>The most common array type is the variable sized arrays. In VIA variable dimensions are identified by an asterisk '*' internally this is encoded as IntIndex.Min meaing the most negative number for the IntIndex type. This means a variable sized array can be considered an array whose dimension can be up to the maximum</p>
-<h3>Fixed Sizd Arrays</h3>
+<p>Internally Vireo defines a C++ typedef <em>IntIndex</em> for use in array indexing calculations. The type is not directly tied to the size_t defined by the C++ compiler. Currently, it is set to Int32, so the number of elements in any one array is limited to 2^31 though the total size of the elements may require more the 2^31 bytes. When Vireo is compiled in 64 bit mode, programs can work with sets of data so long as no one contiguous array exceeds the element count limit. While the IntIndex type is used in the core routines, many of the VIA exposed APIs are still defined directly as Int32 (In order to match LaBVIEW) so there is still work to be done before Int64 indexes will work.</p>
+<h3>Variable sized arrays</h3>
+<p>The most common array type is the variable sized arrays. In VIA variable dimensions are identified by an asterisk '*' internally this is encoded as IntIndex.Min meaning the most negative number for the IntIndex type. This means a variable sized array can be considered an array whose dimension can be up to the maximum</p>
+<h3>Fixed Sized Arrays</h3>
 <p>Resizing a Fixed Size array has no effect.</p>
 <h3>Bounded Arrays</h3>
-<p>Bounded arays specify an maximum sise up when defined. In the refernce runtime their storage is allocation at data initialiation time so no allocation occurs when the logical size of the array is changed. Resizing an array to a size beween 0 and its bounded size will change it to that size. Attempting to size it larger that then maximum will leave it un affected. Note that whie storage reallocation ins not necessary for bounded arrays. REallocation can still occur if the size of the elements are them selves dynamic in size. For example an Bounded array of strings.</p>
+<p>Bounded arrays specify an maximum size up when defined. In the reference runtime, their storage is allocated at data initialization time, so no allocation occurs when the logical size of the array is changed. Resizing an array to a size beween 0 and its bounded size will change it to that size. Attempting to size it larger that then maximum will leave it unaffected. Note that whie storage reallocation ins not necessary for bounded arrays. Reallocation can still occur if the size of the elements are themselves dynamic in size. For example, a bounded array of strings.</p>
 <h3>Zero Dimensional Arrays</h3>
-<p>Zero dimensional arrays are arrays that have no dimensions, not arrays that have a dimension of zero. ZDAs are a bit unique methematically in that they always contain one element while in comparison arrays with 1 or more dimensions can be empty if one of the dimension sizes is set to 0. ZDAs types are not directly used from LabVIEW diagrams, but are used internaly. A key characteristice of ZDAs is that it possible to detect if the single container has an element in it. This makes ZDAs the internal basis for nullable types, LabVIEW variants and objects. For this reason the IsArray() test is slightly different checking for Rank() greater than 0.</p>
+<p>Zero dimensional arrays are arrays that have no dimensions, not arrays that have a dimension of zero. ZDAs are a bit unique methematically in that they always contain one element while in comparison arrays with 1 or more dimensions can be empty if one of the dimension sizes is set to 0. ZDAs types are not directly used from LabVIEW diagrams but are used internally. A key characteristice of ZDAs is that it possible to detect if the element is holding anything. This makes ZDAs the internal basis for nullable types, LabVIEW variants and objects. For this reason the IsArray() test is slightly different from checking for Rank() greater than 0.</p>
 <div class="fragment"><div class="line">c(</div>
 <div class="line">    e(a(.Int32 *)       1DArray)            <span class="comment">// IsArray = true;  Rank = 1</span></div>
 <div class="line">    e(a(.Int32 * *)     2DArray)            <span class="comment">// IsArray = true;  Rank = 2</span></div>
@@ -148,8 +148,8 @@ $(document).ready(function(){initNavTree('md_dox__intro_array_examples.html','')
 <div class="line">    e(a(.Int32)         0DArrayOfInt32)     <span class="comment">// IsArray = true;  Rank = 0</span></div>
 <div class="line">    e(a(.*)             0DArrayOfGeneric)   <span class="comment">// IsArray = true;  Rank = 0</span></div>
 <div class="line">)</div>
-</div><!-- fragment --><h3>Runing out of memory</h3>
-<p>Each TypeManger and its coresponding ExecutionContext has a memory threshold, if an allocation will take the total above that limit the allcaiton will fail.</p>
+</div><!-- fragment --><h3>Running out of memory</h3>
+<p>Each TypeManger and its corresponding ExecutionContext has a memory threshold, if an array operation would take the total allocation above that limit the allocation fails.</p>
 <h2>Next Steps</h2>
 <ul>
 <li><a href="index.html">Introduction</a></li>
