--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@ Vireo workflow</div></div>
 <div class="line">sys 0m0.002s</div>
 </div><!-- fragment --><h2>Next Steps</h2>
 <ul>
+<li><a href="playground/Editor.html">Web based Vireo playground</a></li>
 <li><a href="index.html">Introduction</a></li>
 <li><a href="md_dox__intro_type_examples.html">Some more simple type examples</a></li>
 <li><a href="md_dox__intro_array_examples.html">Some array type examples</a></li>
