dox: re-added type manager notes

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ Vireo workflow</div></div>
 <li><a href="playground/Editor.html">Web based Vireo playground</a></li>
 <li><a href="md_dox__intro_type_examples.html">Some more simple type examples</a></li>
 <li><a href="md_dox__intro_array_examples.html">Some array type examples</a></li>
-<li><a href="md_dox__intro_parallel_clump_examples.html">VIs with parallel execution</a> </li>
+<li><a href="md_dox__intro_parallel_clump_examples.html">VIs with parallel execution</a></li>
+<li><a href="md_dox__type_manager.html">Looking closer at the TypeManager</a> </li>
 </ul>
 </div></div><!-- contents -->
 <!-- start footer part -->
