--- a/Vireo_Web/SiteSource/Editor.html
+++ b/Vireo_Web/SiteSource/Editor.html
@@ -79,14 +79,35 @@ enqueue (HelloWorld)
                         </div>
                         <div class="tab-pane" id="Canvas">
                             <div class="row" >
-                                <canvas id="theCanvas" height="400" width="500" style="border:1px solid #d3d3d3;">
+                                <canvas id="theCanvas" height="400" width="500" style="background-color:transparent;left:0;top:0">
                             </div>
                             <div class="row" id="FpTable">
-                                <input type="range" id="fpValue1" step= 0.01 min=0.0 max=1.0 value=0.5 style="width:500px;padding:9px"/>
-                                <input type="range" id="fpValue2" step= 0.01 min=0.0 max=50.0 value=5.0 style="width:500px;padding:9px"/>
-                                <input type="range" id="fpValue3" step= 0.01 min=0.0 max=0.1 value=0.001 style="width:500px;padding:9px"/>
-                                <input type="range" id="fpValue4" step= 1.0 min=0 max=100 value=20.0 style="width:500px;padding:9px"/>
-                                <input type="text" id="frameCounter" value="1" />
+                                <table>
+                                    <tr>
+                                        <td>Alpha </td>
+                                        <td><input type="range" id="fp1" step= 0.01 min=0.0 max=1.0 value=0.5 style="width:400px;padding:9px"/></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Noise </td>
+                                        <td><input type="range" id="fp2" step= 0.01 min=0.0 max=50.0 value=5.0 style="width:400px;padding:9px"/></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Amplitude </td>
+                                        <td><input type="range" id="fp3" step= 0.01 min=0.0 max=50.0 value=5.0 style="width:400px;padding:9px"/></td>
+                                    </tr>
+                                    <tr>
+                                        <td>DeltaT </td>
+                                        <td><input type="range" id="fp4" step= 0.01 min=0.0 max=0.1 value=0.001 style="width:400px;padding:9px"/></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Delay </td>
+                                        <td><input type="range" id="fp5" step= 1.0 min=0 max=100 value=20.0 style="width:400px;padding:9px"/></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Data FPS </td>
+                                        <td><input type="text" id="frameCounter" value="1" /></td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                         <div class="tab-pane" id="Explore">
@@ -147,8 +168,8 @@ enqueue (HelloWorld)
                 esh.execCount = 0
                 esh.startTime = Date.now();
                 v_state.value = "started";
-                setTimeout(VireoRunProc,50);
-                setTimeout(UpdateFrontPanel,100);
+                setTimeout(VireoRunProc,0);
+                setTimeout(UpdateFrontPanel,0);
 
             }
             function VRunRun()
@@ -175,10 +196,11 @@ enqueue (HelloWorld)
         $("#LVLink").click(function(){LVLink();} );
 
 
-        $("#fpValue1").on('change', function(){LVDoubleControl("#fpValue1");} );
-        $("#fpValue2").on('change', function(){LVDoubleControl("#fpValue2");} );
-        $("#fpValue3").on('change', function(){LVDoubleControl("#fpValue3");} );
-        $("#fpValue4").on('change', function(){LVDoubleControl("#fpValue4");} );
+        $("#fp1").on('change', function(){LVDoubleControl("#fp1", "_v7_Alpha");} );
+        $("#fp2").on('change', function(){LVDoubleControl("#fp2", "_v5_NoiseLevel");} );
+        $("#fp3").on('change', function(){LVDoubleControl("#fp3", "_v4_Amplitude");} );
+        $("#fp4").on('change', function(){LVDoubleControl("#fp4", "_v3_DeltaT");} );
+        $("#fp5").on('change', function(){LVDoubleControl("#fp5", "_v6_milliseconds%20to%20wait");} );
 
 
         /*
@@ -190,10 +212,10 @@ enqueue (HelloWorld)
         }
         */
 
-        function LVDoubleControl(v)
+        function LVDoubleControl(v, varName)
         {
             controlValue = $(v).val();
-            esh.pokeDouble(esh.h, "TopVI", v.substring(1), controlValue);
+            esh.pokeDouble(esh.h, "_VireoScope3%2Evi", varName, controlValue);
             v_state.value = $(v).val();
         }
 
@@ -247,20 +269,28 @@ enqueue (HelloWorld)
             setTimeout(LVLink, 100);
         }
 
+        oldFrameCount = 0;
         function UpdateFrontPanel()
         {
-            $("#frameCounter").val(esh.peekDouble(esh.h, "TopVI", "frameCounter"));
-            setTimeout(UpdateFrontPanel, 100);
+            if (esh.pause)
+                return;
+            // Estimate of data frame count
+            newFrameCount = esh.peekDouble(esh.h, "_VireoScope3%2Evi", "_v9_FrameCount");
+            $("#frameCounter").val((newFrameCount - oldFrameCount)*2);
+            oldFrameCount = newFrameCount;
+            setTimeout(UpdateFrontPanel, 500);
         }
 
         function VireoRunProc()
         {
             // Run a chunk of code. if there is more pending
             // Then restart soon, else restart when it makes sense.
-        
+            if (esh.pause)
+                return;
+            
             var x = esh.executeSlices(esh.h, 1000);
             esh.execCount += 1;
-            if (x>0 && !esh.pause) {
+            if (x>0) {
                 // periodically sleep for 50 ms or so.
                 setTimeout(VireoRunProc, 0);
             } else {
