--- a/playground/Editor.html
+++ b/playground/Editor.html
@@ -29,6 +29,7 @@
                             </button>
                             
                             <ul class="dropdown-menu">
+                                <li><a id="ParallelSample">Parallel</a></li>
                                 <li><a id="MandelbrotSample">Mandelbrot</a></li>
                                 <li><a id="PiSample">π calculator</a></li>
                                 <li><a id="TicTockSample">TicTock</a></li>
@@ -193,6 +194,7 @@ enqueue (HelloWorld)
         $("#TicTockSample").click(function(){LoadSample("TicTock.via");} );
         $("#SineWaveSample").click(function(){LoadSample("SineWave.via");} );
         $("#MandelbrotSample").click(function(){LoadSample("Mandelbrot.via");} );
+        $("#ParallelSample").click(function(){LoadSample("Parallel.via");} );
         $("#LVLink").click(function(){LVLink();} );
 
 
