Added origin trial token

--- a/webbluetooth/index.html
+++ b/webbluetooth/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="origin-trial" content="">
+    <!-- Origin Trial Token, feature = Web Bluetooth, origin = https://ni.github.io, expires = 2016-09-23 -->
+    <meta http-equiv="origin-trial" content="AtpzKMDhkKgmpSoFPCqoVaS0qxLYSLE+l5EULR4hxqApLQjPoyDA8HJs6Qo0xWZ7NdjZ48i/xz2b05x+dKO7kQcAAABXeyJvcmlnaW4iOiAiaHR0cHM6Ly9uaS5naXRodWIuaW86NDQzIiwgImZlYXR1cmUiOiAiV2ViQmx1ZXRvb3RoIiwgImV4cGlyeSI6IDE0NzQ2MzgzMzF9">
     <style>
 		/* Read only section. Source panel edits to these control styles will not be persisted */
 		[data-ni-base-style] {position: absolute;}
