Change to named modules
Named modules allow for use case where requirejs is loaded in the browser but is not used by user directly.

The loaderglobal.js was modified to show how to handle this possible case.

HTTP and HelloNode manual tests updated to use new module but currently not functional.

--- a/test-it/httptest1/loaderamd.html
+++ b/test-it/httptest1/loaderamd.html
@@ -3,7 +3,7 @@
 <script data-main="loaderamd" src="require.js"></script>
 </head>
 <body>
-<script type="via/text" id="viacode">
+<script type="text/via" id="viacode">
 define(Mandelbrot dv(.VirtualInstrument (
     // Parameter list
     c(
