--- a/test-it/httptest1/loaderglobal.html
+++ b/test-it/httptest1/loaderglobal.html
@@ -2,12 +2,13 @@
 <head>
 <script src="../../dist/vireo.js"></script>
 <script src="../../source/io/module_vireoapi.js"></script>
+<script src="../../source/io/module_httpClient.js"></script>
 <script src="../../source/core/vireo.loader.js"></script>
 <script src="loaderglobal.js"></script>
 
 </head>
 <body>
-<script type="via/text" id="viacode">
+<script type="text/via" id="viacode">
 define(Mandelbrot dv(.VirtualInstrument (
     // Parameter list
     c(
