Make JS-Vireo interfaces consistent
Removed uses of emscripten_run_script_string and EM_ASM and replaced them with extern C and library + module implementations

Due to these changes was able to enable -s NO_DYNAMIC_EXECUTION=1 letting Vireo run in CSP environments such as Chrome Extensions or maybe even Facebook Instant Games :)

--- a/test-it/httptest1/loaderglobal.html
+++ b/test-it/httptest1/loaderglobal.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script src="../../dist/vireo.js"></script>
+<script src="../../source/core/module_coreHelpers.js"></script>
 <script src="../../source/io/module_eggShell.js"></script>
 <script src="../../source/io/module_httpClient.js"></script>
 <script src="../../source/core/vireo.loader.js"></script>
