--- a/test-it/httptest1/loaderamdenvglobal.html
+++ b/test-it/httptest1/loaderamdenvglobal.html
@@ -4,6 +4,7 @@
 The existing loaderglobal code should still be able to function -->
 <script data-main="loaderamdenvglobalmain" src="../../node_modules/requirejs/require.js"></script>
 <script src="../../dist/vireo.js"></script>
+<script src="../../source/core/module_coreHelpers.js"></script>
 <script src="../../source/io/module_eggShell.js"></script>
 <script src="../../source/io/module_httpClient.js"></script>
 <script src="../../source/core/vireo.loader.js"></script>
