--- a/test-it/httptest1/testhttp.html
+++ b/test-it/httptest1/testhttp.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script src="../../dist/vireo.js"></script>
+<script src="../../source/core/module_coreHelpers.js"></script>
 <script src="../../source/io/module_eggShell.js"></script>
 <script src="../../source/io/module_httpClient.js"></script>
 <script src="../../source/core/vireo.loader.js"></script>
