--- a/test-it/httptest1/loaderglobalperf.html
+++ b/test-it/httptest1/loaderglobalperf.html
@@ -24,12 +24,17 @@ define (_Function%2Egviweb dv(.VirtualInstrument (
         e(dv(.Int32 0)dataItem_Numeric)   // Int32
         e(.UInt32 local6)   // UInt32
         e(.Double fps)
+        e(c(
+            e(.Boolean status)   // Boolean
+            e(.Int32 code)   // Int32
+            e(.String source)   // String
+        ) errorCluster)   // Cluster
     )
         clump(1
         Copy(c2 local4 )
         Perch(0)
         Copy(local4 dataItem_Numeric )
-        CurrentBrowserFPS(fps)
+        CurrentBrowserFPS(fps errorCluster)
         Println(fps)
         WaitMilliseconds(c1 * )
         BranchIfTrue(1 c0)
