--- a/test-it/httptest1/loaderamdenvglobal.html
+++ b/test-it/httptest1/loaderamdenvglobal.html
@@ -3,7 +3,7 @@
 <!-- In this test the user loads require.js but it has nothing to do with vireo usage.
 The existing loaderglobal code should still be able to function -->
 <script data-main="loaderamdenvglobalmain" src="../../node_modules/requirejs/require.js"></script>
-<script src="../../dist/vireo.js"></script>
+<script src="../../dist/asmjs-unknown-emscripten/release/vireo.js"></script>
 <script src="../../source/core/module_coreHelpers.js"></script>
 <script src="../../source/io/module_eggShell.js"></script>
 <script src="../../source/io/module_httpClient.js"></script>
