--- a/test-it/httptest1/loaderglobalperf.html
+++ b/test-it/httptest1/loaderglobalperf.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="../../dist/vireo.js"></script>
+<script src="../../dist/asmjs-unknown-emscripten/release/vireo.js"></script>
 <script src="../../source/core/module_coreHelpers.js"></script>
 <script src="../../source/io/module_eggShell.js"></script>
 <script src="../../source/io/module_httpClient.js"></script>
