--- a/test-it/ManualLoaderTests/loaderglobal.html
+++ b/test-it/ManualLoaderTests/loaderglobal.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-<script type="module" src="./moduletest.js"></script>
-</head>
+<script src="../../dist/wasm32-unknown-emscripten/release/vireo.js"></script>
+<script src="loaderglobal.js"></script>
 
+</head>
 <body>
 <script type="text/via" id="viacode">
 define(Mandelbrot dv(.VirtualInstrument (
