--- a/test-it/ManualLoaderTests/loaderglobal_amdenv.html
+++ b/test-it/ManualLoaderTests/loaderglobal_amdenv.html
@@ -1,12 +1,10 @@
 <html>
 <head>
-<script src="../../dist/asmjs-unknown-emscripten/release/vireo.js"></script>
-<script src="../../source/core/module_coreHelpers.js"></script>
-<script src="../../source/io/module_eggShell.js"></script>
-<script src="../../source/io/module_httpClient.js"></script>
-<script src="../../source/core/vireo.loader.js"></script>
+<!-- In this test the user loads require.js but it has nothing to do with vireo usage.
+The existing loaderglobal code should still be able to function -->
+<script data-main="loaderglobal_amdenv" src="../../node_modules/requirejs/require.js"></script>
+<script src="../../dist/wasm32-unknown-emscripten/release/vireo.js"></script>
 <script src="loaderglobal.js"></script>
-
 </head>
 <body>
 <script type="text/via" id="viacode">
