--- a/test-it/ManualLoaderTests/loaderglobal_currentbrowserfps.html
+++ b/test-it/ManualLoaderTests/loaderglobal_currentbrowserfps.html
@@ -1,11 +1,7 @@
 <html>
 <head>
-<script src="../../dist/asmjs-unknown-emscripten/release/vireo.js"></script>
-<script src="../../source/core/module_coreHelpers.js"></script>
-<script src="../../source/io/module_eggShell.js"></script>
-<script src="../../source/io/module_httpClient.js"></script>
-<script src="../../source/core/vireo.loader.js"></script>
-<script src="loaderglobalperf.js"></script>
+<script src="../../dist/wasm32-unknown-emscripten/release/vireo.js"></script>
+<script src="loaderglobal_currentbrowserfps.js"></script>
 
 </head>
 <body>
